[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[dependencies]
djb2 = { path = "djb2" }
djb2macro = { path = "djb2macro" }
hash_resolver = { path = "hash_resolver" }
embed_resources = { path = "embed_resources" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
]
