[package]
name = "embed_resources"
version = "0.1.0"
edition = "2021"

[lib]
name = "embed_resources"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.68", features = ["extra-traits"] }
quote = "1.0.36"

# For Windows API
[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
]
